src/main/java/org/beetl/core/parser/BeetlParser.java
// Generated from BeetlParser.g4 by ANTLR 4.2.2
package org.beetl.core.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BeetlParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Elsefor=3, Switch=6, COMMENT_TAG=63, Try=15, LEFT_TEXT_TOKEN=53, LARGE_EQUAL=34, 
		OctalLiteral=56, MOD=30, LEFT_ANGULAR=71, INCREASE=23, While=5, NOT=38, 
		ALL_COMMENT_CHAR=65, Case=13, AND=39, RIGHT_TOKEN=52, RIGHT_SQBR=22, DECREASE=24, 
		Identifier=59, Default=14, AT=42, TYPE_END=74, LEFT_TOKEN=51, NOT_EQUAL=32, 
		COMMA=47, EQUAL=31, LESS=37, LEFT_PAR1=68, LEFT_PAR=19, Select=7, PERIOD1=67, 
		MUlTIP=28, Return=8, VIRTUAL=25, If=1, LEFT_SQBR=21, ADD=26, RIGHT_BRACE=18, 
		HexLiteral=54, QUESTOIN=41, Continue=10, LINE_COMMENT=61, Catch=16, PERIOD=49, 
		Identifier1=66, NULL=43, ASSIN=33, COMMENT_OPEN=62, RIGHT_PAR1=69, MIN=27, 
		Directive=12, COMMA1=70, DecimalLiteral=55, For=2, TRUE=44, StringLiteral=58, 
		COLON=48, WS=60, COMMENT_END=64, Break=9, FOR_IN=50, LEFT_BRACE=17, WS1=73, 
		FloatingPointLiteral=57, RIGHT_PAR=20, OR=40, LARGE=35, LESS_EQUAL=36, 
		DIV=29, END=46, RIGHT_ANGULAR=72, Else=4, FALSE=45, Var=11;
	public static final String[] tokenNames = {
		"<INVALID>", "'if'", "'for'", "'elsefor'", "'else'", "'while'", "'switch'", 
		"'select'", "'return'", "'break'", "'continue'", "'var'", "Directive", 
		"'case'", "'default'", "'try'", "'catch'", "'{'", "'}'", "LEFT_PAR", "RIGHT_PAR", 
		"'['", "']'", "'++'", "'--'", "'.~'", "'+'", "'-'", "'*'", "'/'", "'%'", 
		"'=='", "'!='", "'='", "'>='", "LARGE", "'<='", "LESS", "'!'", "'&&'", 
		"'||'", "'?'", "'@'", "'null'", "'true'", "'false'", "';'", "COMMA", "':'", 
		"PERIOD", "'in'", "'<<'", "'>>'", "'<$'", "HexLiteral", "DecimalLiteral", 
		"OctalLiteral", "FloatingPointLiteral", "StringLiteral", "Identifier", 
		"WS", "LINE_COMMENT", "COMMENT_OPEN", "COMMENT_TAG", "COMMENT_END", "ALL_COMMENT_CHAR", 
		"Identifier1", "PERIOD1", "LEFT_PAR1", "RIGHT_PAR1", "COMMA1", "LEFT_ANGULAR", 
		"RIGHT_ANGULAR", "WS1", "TYPE_END"
	};
	public static final int
		RULE_prog = 0, RULE_block = 1, RULE_statement = 2, RULE_commentTypeTag = 3, 
		RULE_commentTypeItemTag = 4, RULE_classOrInterfaceType = 5, RULE_typeArguments = 6, 
		RULE_typeArgument = 7, RULE_directiveExp = 8, RULE_directiveExpIDList = 9, 
		RULE_g_switchStatment = 10, RULE_g_caseStatment = 11, RULE_g_defaultStatment = 12, 
		RULE_varDeclareList = 13, RULE_assignMent = 14, RULE_switchBlock = 15, 
		RULE_switchBlockStatementGroup = 16, RULE_switchLabel = 17, RULE_forControl = 18, 
		RULE_forInControl = 19, RULE_generalForControl = 20, RULE_forInit = 21, 
		RULE_forUpdate = 22, RULE_parExpression = 23, RULE_expressionList = 24, 
		RULE_statementExpression = 25, RULE_textStatment = 26, RULE_textVar = 27, 
		RULE_textformat = 28, RULE_constantsTextStatment = 29, RULE_constantExpression = 30, 
		RULE_expression = 31, RULE_varRef = 32, RULE_varAttribute = 33, RULE_safe_output = 34, 
		RULE_safe_allow_exp = 35, RULE_functionCall = 36, RULE_functionTagCall = 37, 
		RULE_functionNs = 38, RULE_nativeCall = 39, RULE_nativeMethod = 40, RULE_nativeArray = 41, 
		RULE_nativeVarRefChain = 42, RULE_json = 43, RULE_jsonKeyValue = 44, RULE_literal = 45, 
		RULE_booleanLiteral = 46, RULE_arguments = 47;
	public static final String[] ruleNames = {
		"prog", "block", "statement", "commentTypeTag", "commentTypeItemTag", 
		"classOrInterfaceType", "typeArguments", "typeArgument", "directiveExp", 
		"directiveExpIDList", "g_switchStatment", "g_caseStatment", "g_defaultStatment", 
		"varDeclareList", "assignMent", "switchBlock", "switchBlockStatementGroup", 
		"switchLabel", "forControl", "forInControl", "generalForControl", "forInit", 
		"forUpdate", "parExpression", "expressionList", "statementExpression", 
		"textStatment", "textVar", "textformat", "constantsTextStatment", "constantExpression", 
		"expression", "varRef", "varAttribute", "safe_output", "safe_allow_exp", 
		"functionCall", "functionTagCall", "functionNs", "nativeCall", "nativeMethod", 
		"nativeArray", "nativeVarRefChain", "json", "jsonKeyValue", "literal", 
		"booleanLiteral", "arguments"
	};

	@Override
	public String getGrammarFileName() { return "BeetlParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BeetlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode EOF() { return getToken(BeetlParser.EOF, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << If) | (1L << For) | (1L << While) | (1L << Switch) | (1L << Select) | (1L << Return) | (1L << Break) | (1L << Continue) | (1L << Var) | (1L << Directive) | (1L << Try) | (1L << LEFT_BRACE) | (1L << LEFT_PAR) | (1L << LEFT_SQBR) | (1L << INCREASE) | (1L << DECREASE) | (1L << ADD) | (1L << MIN) | (1L << NOT) | (1L << AT) | (1L << NULL) | (1L << TRUE) | (1L << FALSE) | (1L << END) | (1L << LEFT_TOKEN) | (1L << LEFT_TEXT_TOKEN) | (1L << DecimalLiteral) | (1L << FloatingPointLiteral) | (1L << StringLiteral) | (1L << Identifier) | (1L << COMMENT_TAG))) != 0)) {
				{
				{
				setState(96); statement();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode RIGHT_BRACE() { return getToken(BeetlParser.RIGHT_BRACE, 0); }
		public TerminalNode LEFT_BRACE() { return getToken(BeetlParser.LEFT_BRACE, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); match(LEFT_BRACE);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << If) | (1L << For) | (1L << While) | (1L << Switch) | (1L << Select) | (1L << Return) | (1L << Break) | (1L << Continue) | (1L << Var) | (1L << Directive) | (1L << Try) | (1L << LEFT_BRACE) | (1L << LEFT_PAR) | (1L << LEFT_SQBR) | (1L << INCREASE) | (1L << DECREASE) | (1L << ADD) | (1L << MIN) | (1L << NOT) | (1L << AT) | (1L << NULL) | (1L << TRUE) | (1L << FALSE) | (1L << END) | (1L << LEFT_TOKEN) | (1L << LEFT_TEXT_TOKEN) | (1L << DecimalLiteral) | (1L << FloatingPointLiteral) | (1L << StringLiteral) | (1L << Identifier) | (1L << COMMENT_TAG))) != 0)) {
				{
				{
				setState(105); statement();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111); match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ForStContext extends StatementContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode For() { return getToken(BeetlParser.For, 0); }
		public TerminalNode RIGHT_PAR() { return getToken(BeetlParser.RIGHT_PAR, 0); }
		public TerminalNode LEFT_PAR() { return getToken(BeetlParser.LEFT_PAR, 0); }
		public ForControlContext forControl() {
			return getRuleContext(ForControlContext.class,0);
		}
		public TerminalNode Elsefor() { return getToken(BeetlParser.Elsefor, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ForStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class CommentTagStContext extends StatementContext {
		public TerminalNode COMMENT_TAG() { return getToken(BeetlParser.COMMENT_TAG, 0); }
		public CommentTypeTagContext commentTypeTag() {
			return getRuleContext(CommentTypeTagContext.class,0);
		}
		public CommentTagStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class BlockStContext extends StatementContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public BlockStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class StatmentExpStContext extends StatementContext {
		public StatementExpressionContext statementExpression() {
			return getRuleContext(StatementExpressionContext.class,0);
		}
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public StatmentExpStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class ReturnStContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Return() { return getToken(BeetlParser.Return, 0); }
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public ReturnStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class BreakStContext extends StatementContext {
		public TerminalNode Break() { return getToken(BeetlParser.Break, 0); }
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public BreakStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class FunctionTagStContext extends StatementContext {
		public FunctionTagCallContext functionTagCall() {
			return getRuleContext(FunctionTagCallContext.class,0);
		}
		public FunctionTagStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class DirectiveStContext extends StatementContext {
		public DirectiveExpContext directiveExp() {
			return getRuleContext(DirectiveExpContext.class,0);
		}
		public TerminalNode Directive() { return getToken(BeetlParser.Directive, 0); }
		public DirectiveStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class TextOutputStContext extends StatementContext {
		public TextStatmentContext textStatment() {
			return getRuleContext(TextStatmentContext.class,0);
		}
		public TextOutputStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class VarStContext extends StatementContext {
		public TerminalNode Var() { return getToken(BeetlParser.Var, 0); }
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public VarDeclareListContext varDeclareList() {
			return getRuleContext(VarDeclareListContext.class,0);
		}
		public VarStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class StaticOutputStContext extends StatementContext {
		public ConstantsTextStatmentContext constantsTextStatment() {
			return getRuleContext(ConstantsTextStatmentContext.class,0);
		}
		public StaticOutputStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class ContinueStContext extends StatementContext {
		public TerminalNode Continue() { return getToken(BeetlParser.Continue, 0); }
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public ContinueStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class IfStContext extends StatementContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public ParExpressionContext parExpression() {
			return getRuleContext(ParExpressionContext.class,0);
		}
		public TerminalNode Else() { return getToken(BeetlParser.Else, 0); }
		public TerminalNode If() { return getToken(BeetlParser.If, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public IfStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class TryStContext extends StatementContext {
		public TerminalNode Catch() { return getToken(BeetlParser.Catch, 0); }
		public TerminalNode RIGHT_PAR() { return getToken(BeetlParser.RIGHT_PAR, 0); }
		public TerminalNode LEFT_PAR() { return getToken(BeetlParser.LEFT_PAR, 0); }
		public TerminalNode Try() { return getToken(BeetlParser.Try, 0); }
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode Identifier() { return getToken(BeetlParser.Identifier, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public TryStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class WhileStContext extends StatementContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode While() { return getToken(BeetlParser.While, 0); }
		public ParExpressionContext parExpression() {
			return getRuleContext(ParExpressionContext.class,0);
		}
		public WhileStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class AssignStContext extends StatementContext {
		public AssignMentContext assignMent() {
			return getRuleContext(AssignMentContext.class,0);
		}
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public AssignStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class SiwchStContext extends StatementContext {
		public ParExpressionContext parExpression() {
			return getRuleContext(ParExpressionContext.class,0);
		}
		public SwitchBlockContext switchBlock() {
			return getRuleContext(SwitchBlockContext.class,0);
		}
		public TerminalNode Switch() { return getToken(BeetlParser.Switch, 0); }
		public SiwchStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class EndContext extends StatementContext {
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public EndContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class SelectStContext extends StatementContext {
		public G_switchStatmentContext g_switchStatment() {
			return getRuleContext(G_switchStatmentContext.class,0);
		}
		public TerminalNode Select() { return getToken(BeetlParser.Select, 0); }
		public SelectStContext(StatementContext ctx) { copyFrom(ctx); }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		int _la;
		try {
			setState(178);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new BlockStContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(113); block();
				}
				break;

			case 2:
				_localctx = new TextOutputStContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(114); textStatment();
				}
				break;

			case 3:
				_localctx = new StaticOutputStContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(115); constantsTextStatment();
				}
				break;

			case 4:
				_localctx = new CommentTagStContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(116); match(COMMENT_TAG);
				setState(117); commentTypeTag();
				}
				break;

			case 5:
				_localctx = new IfStContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(118); match(If);
				setState(119); parExpression();
				setState(120); statement();
				setState(123);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(121); match(Else);
					setState(122); statement();
					}
					break;
				}
				}
				break;

			case 6:
				_localctx = new ForStContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(125); match(For);
				setState(126); match(LEFT_PAR);
				setState(127); forControl();
				setState(128); match(RIGHT_PAR);
				setState(129); statement();
				setState(132);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(130); match(Elsefor);
					setState(131); statement();
					}
					break;
				}
				}
				break;

			case 7:
				_localctx = new WhileStContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(134); match(While);
				setState(135); parExpression();
				setState(136); statement();
				}
				break;

			case 8:
				_localctx = new SiwchStContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(138); match(Switch);
				setState(139); parExpression();
				setState(140); switchBlock();
				}
				break;

			case 9:
				_localctx = new SelectStContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(142); match(Select);
				setState(143); g_switchStatment();
				}
				break;

			case 10:
				_localctx = new TryStContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(144); match(Try);
				setState(145); block();
				setState(153);
				_la = _input.LA(1);
				if (_la==Catch) {
					{
					setState(146); match(Catch);
					setState(147); match(LEFT_PAR);
					setState(149);
					_la = _input.LA(1);
					if (_la==Identifier) {
						{
						setState(148); match(Identifier);
						}
					}

					setState(151); match(RIGHT_PAR);
					setState(152); block();
					}
				}

				}
				break;

			case 11:
				_localctx = new ReturnStContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(155); match(Return);
				setState(157);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LEFT_BRACE) | (1L << LEFT_PAR) | (1L << LEFT_SQBR) | (1L << INCREASE) | (1L << DECREASE) | (1L << ADD) | (1L << MIN) | (1L << NOT) | (1L << AT) | (1L << NULL) | (1L << TRUE) | (1L << FALSE) | (1L << DecimalLiteral) | (1L << FloatingPointLiteral) | (1L << StringLiteral) | (1L << Identifier))) != 0)) {
					{
					setState(156); expression(0);
					}
				}

				setState(159); match(END);
				}
				break;

			case 12:
				_localctx = new BreakStContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(160); match(Break);
				setState(161); match(END);
				}
				break;

			case 13:
				_localctx = new ContinueStContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(162); match(Continue);
				setState(163); match(END);
				}
				break;

			case 14:
				_localctx = new VarStContext(_localctx);
				enterOuterAlt(_localctx, 14);
				{
				setState(164); match(Var);
				setState(165); varDeclareList();
				setState(166); match(END);
				}
				break;

			case 15:
				_localctx = new DirectiveStContext(_localctx);
				enterOuterAlt(_localctx, 15);
				{
				setState(168); match(Directive);
				setState(169); directiveExp();
				}
				break;

			case 16:
				_localctx = new AssignStContext(_localctx);
				enterOuterAlt(_localctx, 16);
				{
				setState(170); assignMent();
				setState(171); match(END);
				}
				break;

			case 17:
				_localctx = new FunctionTagStContext(_localctx);
				enterOuterAlt(_localctx, 17);
				{
				setState(173); functionTagCall();
				}
				break;

			case 18:
				_localctx = new StatmentExpStContext(_localctx);
				enterOuterAlt(_localctx, 18);
				{
				setState(174); statementExpression();
				setState(175); match(END);
				}
				break;

			case 19:
				_localctx = new EndContext(_localctx);
				enterOuterAlt(_localctx, 19);
				{
				setState(177); match(END);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentTypeTagContext extends ParserRuleContext {
		public TerminalNode LEFT_PAR1() { return getToken(BeetlParser.LEFT_PAR1, 0); }
		public List<TerminalNode> COMMA1() { return getTokens(BeetlParser.COMMA1); }
		public CommentTypeItemTagContext commentTypeItemTag(int i) {
			return getRuleContext(CommentTypeItemTagContext.class,i);
		}
		public List<CommentTypeItemTagContext> commentTypeItemTag() {
			return getRuleContexts(CommentTypeItemTagContext.class);
		}
		public TerminalNode RIGHT_PAR1() { return getToken(BeetlParser.RIGHT_PAR1, 0); }
		public TerminalNode COMMA1(int i) {
			return getToken(BeetlParser.COMMA1, i);
		}
		public CommentTypeTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commentTypeTag; }
	}

	public final CommentTypeTagContext commentTypeTag() throws RecognitionException {
		CommentTypeTagContext _localctx = new CommentTypeTagContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_commentTypeTag);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180); match(LEFT_PAR1);
			setState(181); commentTypeItemTag();
			setState(186);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA1) {
				{
				{
				setState(182); match(COMMA1);
				setState(183); commentTypeItemTag();
				}
				}
				setState(188);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(189); match(RIGHT_PAR1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentTypeItemTagContext extends ParserRuleContext {
		public TerminalNode Identifier1() { return getToken(BeetlParser.Identifier1, 0); }
		public ClassOrInterfaceTypeContext classOrInterfaceType() {
			return getRuleContext(ClassOrInterfaceTypeContext.class,0);
		}
		public CommentTypeItemTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commentTypeItemTag; }
	}

	public final CommentTypeItemTagContext commentTypeItemTag() throws RecognitionException {
		CommentTypeItemTagContext _localctx = new CommentTypeItemTagContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_commentTypeItemTag);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191); classOrInterfaceType();
			setState(192); match(Identifier1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassOrInterfaceTypeContext extends ParserRuleContext {
		public TerminalNode PERIOD1(int i) {
			return getToken(BeetlParser.PERIOD1, i);
		}
		public TerminalNode Identifier1(int i) {
			return getToken(BeetlParser.Identifier1, i);
		}
		public List<TerminalNode> PERIOD1() { return getTokens(BeetlParser.PERIOD1); }
		public TypeArgumentsContext typeArguments() {
			return getRuleContext(TypeArgumentsContext.class,0);
		}
		public List<TerminalNode> Identifier1() { return getTokens(BeetlParser.Identifier1); }
		public ClassOrInterfaceTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classOrInterfaceType; }
	}

	public final ClassOrInterfaceTypeContext classOrInterfaceType() throws RecognitionException {
		ClassOrInterfaceTypeContext _localctx = new ClassOrInterfaceTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classOrInterfaceType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194); match(Identifier1);
			setState(199);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PERIOD1) {
				{
				{
				setState(195); match(PERIOD1);
				setState(196); match(Identifier1);
				}
				}
				setState(201);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(203);
			_la = _input.LA(1);
			if (_la==LEFT_ANGULAR) {
				{
				setState(202); typeArguments();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
